# nautilus_metatrader5

./: .gitignore  README.md  pyproject.toml
examples/: connect_with_dockerized_terminal.py  connect_with_terminal.py  metatrader5_sandbox.py
nautilus_metatrader5/: config.py  data.py  execution.py  factories.py  providers.py  terminal.py
nautilus_metatrader5/client/: account.py  client.py  common.py  connection.py  market_data.py  order.py  symbol.py
nautilus_metatrader5/parsing/: instruments.py
nautilus_metatrader5/websocket/: client.py
